# lab8

./: CMakeLists.txt  main.cpp
src/: task1.cpp  task2.cpp  task3.cpp
src/include/: task1.hpp  task2.hpp  task3.hpp
